<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lehilti.samplevolley.Main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="45dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/cidade"
                android:gravity="center"/>

            <EditText
                android:id="@+id/busca_cidade"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/estado"
                android:gravity="center"/>

            <EditText
                android:id="@+id/busca_estado"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Buscar"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>
