<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lehilti.samplevolley.CityScore.CityScore">

    <TextView
        android:id="@+id/txtPoint"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:textSize="16sp"/>

</android.support.constraint.ConstraintLayout>
